Mobile css fixes
- Mobile and Desktop now looks the same for now. I think Mobile needs to display popups as modals anyway -- will handle that separately in the future.

- Reduce the popup's bottom margin to make it closer to the button. This lazily solves the big gap in mobile, and also prevents the seekbar thumbnail from showing (although the latter should be disabled when the popup is up). It also matches other popups, so I'm staying within theme.

--- a/ui/component/viewers/videoViewer/internal/plugins/videojs-settings-menu/videojs-plus/variable.scss
+++ b/ui/component/viewers/videoViewer/internal/plugins/videojs-settings-menu/videojs-plus/variable.scss
@@ -15,7 +15,11 @@ $control-bar-button-width: $control-bar-height * 0.9;
 
 $smaller-font-size: 0.875em;
 
-$small-dimension: 480px;
+// It doesn't seems like `small-dimension` is fully fleshed out,
+// Just treat everything the same for now, as I think mobile popups need to be
+// implemented as modals anyways ("coming soon").
+// The variable is retained here for future reference and to reduce churn.
+$small-dimension: 1px; // 480px;
 
 @mixin floating-black-transparent-background() {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
