--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -868,6 +868,12 @@ $control-bar-icon-size: 30px;
       margin-top: -0px;
     }
 
+    div.vjs-setting-button {
+      @media (max-width: $breakpoint-small) {
+        width: 2.8em;
+      }
+    }
+
     .vjs-snapshot-button {
       margin-right: 8px;
       svg {
